apps/freshmart/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: freshmart
  namespace: cloudforge
  labels:
    app: freshmart

spec:
  replicas: 2

  revisionHistoryLimit: 5

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0

  selector:
    matchLabels:
      app: freshmart

  template:
    metadata:
      labels:
        app: freshmart

    spec:
      containers:
        - name: freshmart

          image: harshitha30galla/freshmart:39702bc
          imagePullPolicy: Always

          command:
            - node

          args:
            - dist/index.cjs

          ports:
            - containerPort: 5000

          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"

          readinessProbe:
            tcpSocket:
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 6

          livenessProbe:
            tcpSocket:
              port: 5000
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 5
