apps/freshmart/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: freshmart-service
  namespace: cloudforge

spec:
  selector:
    app: freshmart

  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP

  type: ClusterIP
