apps/freshmart/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: freshmart-ingress
  namespace: cloudforge

  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: cloudforge

spec:
  ingressClassName: alb

  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: freshmart-service
                port:
                  number: 80
